Improved:
Authentication
Error handling
Validation
Routes
Swaggwer documentations
and dependencies
